[package]
name = "yaac"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
serde = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
serde={version="1", features = ["derive"]}
temp-env = "0.3.6"

